--- a/resume-photo.tex
+++ b/resume-photo.tex
@@ -99,7 +99,7 @@ BoldFont=Pro_GB18030DemiBold.ttf,
 \vspace{3ex}
 \centerline{\LARGE\bfseries{卷不过大家}}
 \vspace{1ex}
-\centerline{\normalsize{\faPhone\ 13xxx-xxx-xxx \quad \faEnvelopeO\ \href{zheyu.ye18@alumni.imperial.ac.uk}{zheyu.ye18@alumni.imperial.ac.uk}}}
+\centerline{\normalsize{\faPhone\ 13xxx-xxx-xxx \quad \faEnvelopeO\ \href{mailto:zheyu.ye18@alumni.imperial.ac.uk}{zheyu.ye18@alumni.imperial.ac.uk}}}
 \vspace{1.5ex}
 
 \input{body}
