--- a/resume.tex
+++ b/resume.tex
@@ -46,7 +46,7 @@ BoldFont=Pro_GB18030DemiBold.ttf,
 
 \usepackage{relsize}
 \usepackage{xspace}
-\protected\def\Cpp{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.28ex}{\relsize{-1}++}}\xspace} 
+\protected\def\Cpp{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.28ex}{\relsize{-1}++}}\xspace}
 
 % use fontawesome
 \usepackage{fontawesome}
@@ -69,7 +69,7 @@ BoldFont=Pro_GB18030DemiBold.ttf,
 \setlist[itemize]{topsep=0.25em, leftmargin=*}
 \setlist[enumerate]{topsep=0.25em, leftmargin=*}
 
-\titleformat{\section}         % Customise the \section command 
+\titleformat{\section}         % Customise the \section command
   {\large\bfseries\raggedright} % Make the \section headers large (\Large),
                                % small capitals (\scshape) and left aligned (\raggedright)
   {}{0em}                      % Can be used to give a prefix to all sections, like 'Section ...'
@@ -84,7 +84,7 @@ BoldFont=Pro_GB18030DemiBold.ttf,
 
 \centerline{\LARGE\bfseries{卷不过大家}}
 \vspace{1ex}
-\centerline{\normalsize{\faPhone\ 13xxx-xxx-xxx \quad \faEnvelopeO\ \href{zheyu.ye18@alumni.imperial.ac.uk}{zheyu.ye18@alumni.imperial.ac.uk} \quad \faHome\  \href{ http://blog.yours.me}{ http://blog.yours.me}}}
+\centerline{\normalsize{\faPhone\ 13xxx-xxx-xxx \quad \faEnvelopeO\ \href{mailto:zheyu.ye18@alumni.imperial.ac.uk}{zheyu.ye18@alumni.imperial.ac.uk} \quad \faHome\  \href{ http://blog.yours.me}{ http://blog.yours.me}}}
 
 \input{body}
 
