add setting cls

--- a/footer.tex
+++ b/footer.tex
@@ -1,3 +1,3 @@
 \begin{tikzpicture}[remember picture, overlay] 
-  \node[anchor = south,fill=CVBlue,draw=none,minimum width=\paperwidth,minimum height=1.5em,align=center,font=\footnotesize,text=white] at ($(current page.south)$) {\faLinkedinSquare \ https://www.linkedin.com/in/username \qquad \faGithub \ https://github.com/username \qquad \faRssSquare \ http://blog.yours.me};
+  \node[anchor = south,fill=ICBlue,draw=none,minimum width=\paperwidth,minimum height=1.5em,align=center,font=\footnotesize,text=white] at ($(current page.south)$) {\faLinkedinSquare \ https://www.linkedin.com/in/username \qquad \faGithub \ https://github.com/username \qquad \faRssSquare \ http://blog.yours.me};
 \end{tikzpicture}
