--- a/body.tex
+++ b/body.tex
@@ -37,11 +37,11 @@ MSc Advanced Computing \quad 硕士 \hfill {英国伦敦}
 努力在率先实现社会主义现代化上走在前列
 
 \begin{itemize}
-  \item 
+  \item
   \begin{itemize}
-      \item 
-      \item 
-      \item 
+      \item
+      \item
+      \item
   \end{itemize}
 
 \end{itemize}
@@ -63,7 +63,7 @@ MSc Advanced Computing \quad 硕士 \hfill {英国伦敦}
 \datedline{\biInfo{混毕业的毕业设计}{无人指导}}{The Pseudo Aeronautics and Space Administration}
 
 \begin{itemize}
-  \item 
+  \item
 \end{itemize}
 
 \datedline{\textbf{人类文明史的沙盘重演}}{\dateRange{20xx.xx}{20xx.xx}}
@@ -85,7 +85,7 @@ SSS: Deep Learning Based Social Scrap Selection Method
 
 113rd Annual Conference on Neural Information Processing Systems (NeurIPS), 2099. (Accepted as Best Paper)
 
-\href{http://pseudo.paper.link.me}{[paper]} \href{http://pseudo.code.link}{[project page]} 
+\href{http://pseudo.paper.link.me}{[paper]} \href{http://pseudo.code.link}{[project page]}
 
 \logosection{\faCogs}{专业技能}
 
@@ -106,3 +106,5 @@ SSS: Deep Learning Based Social Scrap Selection Method
   \item GitHub: https://github.com/username
   \item 语言: 英语 - 熟练(TOEFL xxx)
 \end{itemize}
+
+%%%% 如果多页简历，可以手动在适当位置插入 \newpage 或者 \clearpage 开始新一页
